--- a/SoftwareRender/SoftwareRender.csproj
+++ b/SoftwareRender/SoftwareRender.csproj
@@ -8,4 +8,8 @@
     <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Pfim" Version="0.11.2" />
+  </ItemGroup>
+
 </Project>
