--- a/SoftwareRender/SoftwareRender.csproj
+++ b/SoftwareRender/SoftwareRender.csproj
@@ -10,6 +10,7 @@
 
   <ItemGroup>
     <PackageReference Include="Pfim" Version="0.11.2" />
+    <PackageReference Include="System.IO.Ports" Version="7.0.0" />
   </ItemGroup>
 
 </Project>
